--- a/test06.html
+++ b/test06.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MaiNT</title>
+    <title>Title</title>
 </head>
 <body>
-<p>Sua file test03 </p>
 
 </body>
-
 </html>
