yeu cau 3_không merge

--- a/test07.html
+++ b/test07.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MaiNT</title>
+    <title>Title</title>
 </head>
 <body>
-<p>test03</p>
+
 </body>
 </html>
